# aegis-antivirus

./: .gitignore  ARCHITECTURE.md  BETA_TEST_REPORT.md  CHANGELOG.md  CI_CD.md  CODE_SIGNING.md  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DETECTION_ENGINE.md  DEVELOPMENT.md  FINAL_VALIDATION_REPORT.md  HARDENING_REPORT.md  INSTALLATION.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  LICENSE  OPEN_SOURCE_READINESS.md  PERFORMANCE_REPORT.md  PRE_RELEASE_AUDIT.md  PROJECT_HEALTH_REPORT.md  PROTOTYPE_AUDIT.md  QUARANTINE_SYSTEM.md  README.md  REALTIME_PROTECTION.md  RELEASE_CHECKLIST.md  RELEASE_ENGINEERING.md  ROADMAP.md  ROADMAP_PUBLIC.md  SBOM.md  SCANNER_VALIDATION.md  SCREENSHOTS.md  SECURITY.md  SECURITY_REVIEW.md  SERVICE_INTEGRATION.md  TASKS.md  UI_SERVICE_INTEGRATION.md  UPDATE_SYSTEM.md  V1_RELEASE_NOTES.md  (+8 more)
.cargo/: audit.toml
.claude/: launch.json
.github/: CODEOWNERS  REPO-METADATA.md  dependabot.yml  pull_request_template.md
.github/ISSUES/: 01-realtime-protection.md  02-ui-service-ipc.md  03-signature-updates.md  04-reporting-system.md  05-installer.md  06-code-signing.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  frontend.yml  release.yml  rust.yml  security.yml
crates/aegis-common/: Cargo.toml
crates/aegis-common/src/: lib.rs
crates/aegis-db/: Cargo.toml
crates/aegis-db/src/: lib.rs
crates/aegis-detect/: Cargo.toml
crates/aegis-detect/benches/: detect_bench.rs
crates/aegis-detect/src/: db.rs  engine.rs  heuristics.rs  lib.rs  model.rs
crates/aegis-detect/tests/: integration.rs
crates/aegis-ipc/: Cargo.toml
crates/aegis-ipc/src/: lib.rs
crates/aegis-quarantine/: Cargo.toml
crates/aegis-quarantine/benches/: quarantine_bench.rs
crates/aegis-quarantine/src/: crypto.rs  db.rs  lib.rs  model.rs  vault.rs
crates/aegis-quarantine/tests/: integration.rs
crates/aegis-realtime/: Cargo.toml
crates/aegis-realtime/benches/: realtime_bench.rs
crates/aegis-realtime/src/: db.rs  lib.rs  model.rs  monitor.rs  pipeline.rs  policy.rs
crates/aegis-realtime/tests/: integration.rs
crates/aegis-scan/: Cargo.toml
crates/aegis-scan/examples/: bench.rs
crates/aegis-scan/src/: lib.rs
crates/aegis-scan/tests/: integration.rs
crates/aegis-service/: Cargo.toml
crates/aegis-service/src/: db.rs  jobs.rs  lib.rs  main.rs  orchestrator.rs  runtime.rs  windows_host.rs
crates/aegis-service/src/service/: detection_service.rs  mod.rs  quarantine_service.rs  scan_service.rs  status_service.rs  windows_service.rs
crates/aegis-service/tests/: integration.rs
crates/aegis-signatures/: Cargo.toml
crates/aegis-signatures/src/: lib.rs
crates/aegis-update/: Cargo.toml  build.rs
crates/aegis-update/benches/: update_bench.rs
crates/aegis-update/src/: db.rs  download.rs  engine.rs  lib.rs  manifest.rs  scheduler.rs  storage.rs  verify.rs  version.rs
crates/aegis-update/tests/: integration.rs
crates/aegis-windows/: Cargo.toml
crates/aegis-windows/src/: browser_extensions.rs  drivers.rs  engine.rs  heuristics.rs  hosts_file.rs  lib.rs  model.rs  registry.rs  scheduled_tasks.rs  services.rs  startup.rs  util.rs
crates/aegis-windows/tests/: integration.rs
crates/aegis-yara/: Cargo.toml
crates/aegis-yara/src/: lib.rs
deploy/: build-installers.ps1  cleanup-data.ps1  generate-sbom.ps1  make-release.ps1  service-control.ps1  sign.ps1  verify-release.ps1
design-prototype/: architecture.html  dashboard.html  index.html  quarantine.html  realtime.html  scan.html  settings.html  threats.html  widget.html  widget.html.artifact.json
design-prototype/css/: app.css
design-prototype/js/: shell.js
docs/screenshots/: README.md
migrations/: 001_initial.sql  002_detection.sql  003_quarantine.sql  004_service.sql  005_realtime.sql  006_update.sql
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs  service_client.rs
src-tauri/src/commands/: mod.rs
src-tauri/wix/: service.wxs
src/components/: AppShell.tsx  Icon.tsx  SectionComingNext.tsx  States.tsx
src/components/shell/: Sidebar.tsx  TopBar.tsx  WinBar.tsx  nav.ts
src/features/dashboard/: Dashboard.test.tsx  Dashboard.tsx  dashboard.css  data.ts
src/features/quarantine/: Quarantine.tsx  quarantine.css
src/features/realtime/: Realtime.tsx  realtime.css
src/features/scan-center/: ScanCenter.tsx  scan.css  useScanSimulation.ts
src/features/settings/: Settings.tsx  settings.css
src/features/threat-center/: ThreatCenter.tsx  data.ts  threats.css
src/features/updates/: Updates.tsx
src/lib/: api.test.ts  api.ts  ipc.ts
src/stores/: healthStore.ts  quarantineStore.ts  realtimeStore.ts  scanStore.ts  securityStore.ts  settingsStore.ts  stores.test.ts  threatStore.ts  updateStore.ts
src/types/: ipc.ts
