[package]
name = "aegis-detect"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
aegis-scan = { path = "../aegis-scan" }
aegis-signatures = { path = "../aegis-signatures" }
aegis-yara = { path = "../aegis-yara" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
aegis-db = { path = "../aegis-db" }
sha2 = { workspace = true }

[[bench]]
name = "detect_bench"
harness = false
