[package]
name = "aegis-quarantine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
aegis-detect = { path = "../aegis-detect" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
aegis-db = { path = "../aegis-db" }

[[bench]]
name = "quarantine_bench"
harness = false
