[package]
name = "aegis-scan"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
md-5.workspace = true
walkdir.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = "3.10"
