[package]
name = "aegis-service"
version = "0.1.0-phase1"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
aegis-db = { path = "../aegis-db" }
aegis-ipc = { path = "../aegis-ipc" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
