[package]
name = "aegis-update"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
aegis-db = { path = "../aegis-db" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"

[[bench]]
name = "update_bench"
harness = false
