[package]
name = "aegis-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-common = { path = "../aegis-common" }
aegis-detect = { path = "../aegis-detect" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3.10"
